--- a/conf/atcommand_athena.conf
+++ b/conf/atcommand_athena.conf
@@ -1,22 +1,34 @@
-/* Atcommands and charcommands configuration file */
+/*
+   _________                                    
+   \_   ___ \_______  ____   ____  __ __  ______
+   /    \  \/\_  __ \/    \ /    \|  |  \/  ___/
+   \     \____|  | \(  ( ) )   |  \  |  /\___ \ 
+    \______  /|__|   \____/|___|  /____//____  >
+           \/                   \/           \/  
 
-/* The symbol that will be used to recognize commands.
-You can set any one character except:
- - control-characters (0x00-0x1f),
- - '%' (party chat symbol)
- - '$' (guild chat symbol)
- - '/' (client commands symbol)
-atcommand_symbol represents @commands used locally.
-charcommand_symbol represents #commands used on other players.
+  Arquivo de configuração do Atcommand e Charcommand
+  Traduzido por Roberto
+*/
+
+
+/* O simbolo que irá ser usado para reconhecer comandos.
+Você pode setar qualquer um, exceto:
+ - caracteres de controle (0x00-0x1f),
+ - '%' (simbolo da chat de grupo)
+ - '$' (simbolo da chat de guild)
+ - '/' (simbolo de comandos)
+
+atcommand_symbol representa @comandos usado localmente.
+charcommand_symbol representa #comandos usado por outros players.
 */
 
 atcommand_symbol : "@"
 charcommand_symbol: "#"
 
-/* Command aliases
-You can define aliases for any command. Aliases work just like original
-command.
-Format is
+/* Atalhos de comandos
+Você pode definir atalhos para qualquer comando. Atalhos funciona apenas
+como o comando original.
+O formato é
 	<commandname>: ["<alias>", ...]
 */
 
@@ -55,7 +67,7 @@ aliases: {
 	kill: ["die"]
 }
 
-/* Commands help file */
+/* Arquivo de ajuda de comandos */
 help: {
 	@include "conf/help.txt"
 }
