--- a/conf/battle_athena.conf
+++ b/conf/battle_athena.conf
@@ -1,61 +1,70 @@
 //--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-// Splitted up into multiple files by Skotlex.
+// _________                                    
+// \_   ___ \_______  ____   ____  __ __  ______
+// /    \  \/\_  __ \/    \ /    \|  |  \/  ___/
+// \     \____|  | \(  ( ) )   |  \  |  /\___ \ 
+//  \______  /|__|   \____/|___|  /____//____  >
+//         \/                   \/           \/  
+//--------------------------------------------------------------
+// Arquivo de Configuração da Battle
+//--------------------------------------------------------------
+// Traduzido para ingles por Peter Kieser <pfak@telus.net>;
+// Revisado por Ancyker;
+// Dividido em múltiplos arquivos por Skotlex;
+// Traduzido para Português por Mara.
 //--------------------------------------------------------------
 
-//General battle-related settings.
+//Configurações gerais da battle.
 import: conf/battle/battle.conf
 
-//Settings specific to the client.
+//Configurações especificas do client.
 import: conf/battle/client.conf
 
-//General drop-related configs.
+//Configurações do drops.
 import: conf/battle/drops.conf
 
-//Experience rates, exp penalties, stats and max level settings.
+//Configurações de Taxa de experiencia, penalidades, atributos e nivel maximo.
 import: conf/battle/exp.conf
 
-//GM levels, atcommands and hack-related configs.
+//Configurações do nivel de GM, atcommands e relacionadas ao hacking.
 import: conf/battle/gm.conf
 
-//Guild and WoE settings
+//Configurações de GdE e clãs.
 import: conf/battle/guild.conf
 
-//Battleground settings
+//Configurações da Batalha Campal.
 import: conf/battle/battleground.conf
 
-//Item/card-specific and crafting related options.
+//Configurações de Itens, cartas criações.
 import: conf/battle/items.conf
 
-//Mob related configuration
+//Configuração relacionada aos monstros.
 import: conf/battle/monster.conf
 
-//Party related configuration
+//Configurações de grupo.
 import: conf/battle/party.conf
 
-//Pet related configuration
+//Configurações de Bixos de Estimação.
 import: conf/battle/pet.conf
 
-//Homunc related configuration
+//Configuração de Homunculus.
 import: conf/battle/homunc.conf
 
-//Player specific settings
+//Configurações relacionadas ao jogador/personagem.
 import: conf/battle/player.conf
 
-//Skill related settings
+//Configurações de Habilidades.
 import: conf/battle/skill.conf
 
-//Status change related settings
+//Configurações de mudança de Status.
 import: conf/battle/status.conf
 
-//Feature control (on/off) settings
+//Configuração do controle (on/off) de características.
 import: conf/battle/feature.conf
 
-// Anything else that didn't fit anywhere else.
-// Includes duel, day/night, mute/manner, log settings.
+// Algo que não se encaixe em outro arquivo.
+// Incluindo duelo, dia/noite, mudo/modo, configurações de log.
 import: conf/battle/misc.conf
 
-//Your custom config goes here.
+//Sua configuração personalizada pode ser feita no arquivo abaixo.
 import: conf/import/battle_conf.txt
