--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -1,211 +1,218 @@
-// Athena Character configuration file.
+//--------------------------------------------------------------
+// _________                                    
+// \_   ___ \_______  ____   ____  __ __  ______
+// /    \  \/\_  __ \/    \ /    \|  |  \/  ___/
+// \     \____|  | \(  ( ) )   |  \  |  /\___ \ 
+//  \______  /|__|   \____/|___|  /____//____  >
+//         \/                   \/           \/  
+//--------------------------------------------------------------
+// Arquivo de Configuração do Char-Server
+//--------------------------------------------------------------
+// Traduzido para Português por Mara
 
-// Note: "Comments" are all text on the right side of a double slash "//"
-// Whatever text is commented will not be parsed by the servers, and serves
-// only as information/reference.
+// Nota: "Comentários" são os textos com duas barras "//" no início da linha
+// Qualquer texto que for comentado não será considerado pelo servidor, e serve
+// apenas como informação/referência.
 
-// Server Communication username and password.
+// Conta de comunicação Interserver, registradas em account.txt (ou equivalente)
 userid: s1
 passwd: p1
 
-// Server name, use alternative character such as ASCII 160 for spaces.
-// NOTE: Do not use spaces or any of these characters which are not allowed in 
-//       Windows filenames \/:*?"<>|
-//       ... or else guild emblems won't work client-side!
-server_name: rAthena
+// Nome do servidor, utilize ASCII 160 ou ALT+255 para espaços.
+// NOTA: Não use o botão espaço no nome, ou emblemas de clãs não funcionarão!
+server_name: Cronus
 
-// Wisp name for server: used to send wisp from server to players (between 4 to 23 characters)
-wisp_server_name: Server
+// Nome do servidor Wisp: usado para enviar mensagens wisp para os jogadores (entre 4 e 23 caracteres)
+wisp_server_name: Servidor
 
-// Login Server IP
-// The character server connects to the login server using this IP address.
-// NOTE: This is useful when you are running behind a firewall or are on
-// a machine with multiple interfaces.
+// IP do Login-Server
+// O char-server conecta-se ao login-server usando este endereço de IP.
+// NOTA: É útil quando seu servidor está sendo rodado com um firewall ou
+// em uma máquina com múltiplas interfaces.
 //login_ip: 127.0.0.1
 
-// The character server listens on the interface with this IP address.
-// NOTE: This allows you to run multiple servers on multiple interfaces
-// while using the same ports for each server.
+// O char-server reconhece a interface com este endereço de IP.
+// NOTA: Isto permite rodar vários servidores em múltiplas interfaces
+// usando a mesma porta para cada servidor.
 //bind_ip: 127.0.0.1
 
-// Login Server Port
+// Porta do Login-Server
 login_port: 6900
 
-// Character Server IP
-// The IP address which clients will use to connect.
-// Set this to what your server's public IP address is.
+// IP do Char-Server
+// O endereço de IP cujo o client irá usar para se conectar.
+// Defina isto para seu IP público do servidor.
 //char_ip: 127.0.0.1
 
-// Character Server Port
+// Porta do Char-Server
 char_port: 6121
 
-//Time-stamp format which will be printed before all messages.
-//Can at most be 20 characters long.
-//Common formats:
-// %I:%M:%S %p (hour:minute:second 12 hour, AM/PM format)
-// %H:%M:%S (hour:minute:second, 24 hour format)
-// %d/%b/%Y (day/Month/year)
-//For full format information, consult the strftime() manual.
+//Formato da data e hora que será exibido antes de todas as mensagens.
+//Pode ter no máximo 20 caracteres.
+//Formatos comuns:
+// %I:%M:%S %p (hora:minuto:segundo 12 horas, formato AM/PM)
+// %H:%M:%S (hora:minuto:segundo, formato 24 horas)
+// %d/%b/%Y (dia/mês/ano)
+//Para informações detalhadas, consulte o manual do comando 'strftime()'.
 //timestamp_format: [%d/%b %H:%M]
 
-//If redirected output contains escape sequences (color codes)
+//A saída redirecionada contém sequências de escape (códigos de cores)
 stdout_with_ansisequence: no
 
-//Makes server output more silent by ommitting certain types of messages:
-//1: Hide Information messages
-//2: Hide Status messages
-//4: Hide Notice Messages
-//8: Hide Warning Messages
-//16: Hide Error and SQL Error messages.
-//32: Hide Debug Messages
-//Example: "console_silent: 7" Hides information, status and notice messages (1+2+4)
+///Torne a saída do servidor mais silenciosa omitindo certos tipos de mensagem:
+//1: Esconder mensagens de Informação
+//2: Esconder mensagens de Status
+//4: Esconder Registro
+//8: Esconder mensagens de Alerta
+//16: Esconder Erros e mensagens de Erro SQL.
+//32: Esconder Debugs
+//Exemplo: "console_silent: 7" esconde informações, status e alertas (1+2+4)
 console_silent: 0
 
-// Console Commands
-// Allow for console commands to be used on/off
-// This prevents usage of >& log.file
+// Comandos do Console
+// Permitir uso de comandos (on/off)
+// Isto previne o uso de >& log.file
 console: off
 
-// Option to force a player to create an e-mail.
-// If a player have default e-mail, and if you activate this option, the player can only connect in the game (to arrive on a map) like follow:
-// - Create at least 1 character
-// - Select 1 character
-// - Select DEL to enter his/her e-mail. (if OK is choosen, client says to the player: 'invalid e-mail')
-// - If his/her e-mail is correct, the player enter in the game (an e-mail is saved definitively).
-// - If his/her e-mail is incorrect, he/she have 'incorrect e-mail' and must select again DEL.
-// - After entering in the game (when the player arrives on a map), DEL and SEL/OK button work normaly for all next connections.
-// Resume: If a player have "incorrect/invalid e-mail" when he/she click on 'OK' button,
-//         the player must click 'DEL' button and register his/her NEW e-mail to enter in the game
-// So, default is 0, because administrator must explain to their players before to activate this option.
+// Opção para forçar um jogador a criar um e-mail.
+// Se o jogador utilizar o e-mail padrão, e você ativar esta opção, o jogador só poderá conectar-se ao jogo (acessar o map-server) se:
+// - Criar pelo menos 1 jogador
+// - Selecionar 1 jogador
+// - Pressionar DEL para digitar o e-mail. (caso escolha OK, o client responderá com: 'e-mail inválido.')
+// - Se o e-mail for correto, o jogador entrará no jogo (o e-mail é definitivamente salvo).
+// - Se o e-mail estiver incorreto, terão 'e-mail incorreto.' e deverão apertar novamente o DEL.
+// - Após entrar no jogo (quando o jogador carrega o mapa), DEL e SEL/OK vão funcionar normalmente para as próximas conexões.
+// Resumo: Se o jogador tiver "e-mail incorreto/inválido." e clicar no botão 'OK',
+//         o jogador deve clicar em 'DEL para registrar seu NOVO e-mail para entrar no jogo.
+// Então, o padrão é 0, porque o administrador deve explicar como o sistema funciona para os jogadores antes de ativar esta opção.
 email_creation: 0
 
-// Type of server.
-// No functional side effects at the moment.
-// Displayed next to the server name in the client.
-// 0=normal, 1=maintenance, 2=over 18, 3=paying, 4=P2P
+// Tipo de servidor.
+// Não tem nenhuma função no momento.
+// Exibido após o nome do servidor no client.
+// 0=normal, 1=manutenção, 2=maiores de 18, 3=pago, 4=P2P
 char_maintenance: 0
 
-// Enable or disable creation of new characters.
-// Now it is actually supported [Kevin]
+// Habilita ou não a criação de novos personagens.
+// Agora isto é suportado [Kevin]
 char_new: 1
 
-// Display (New) in the server list.
+// Exibir (New) na lista de servidores.
 char_new_display: 0
 
-// Maximum users able to connect to the server. Set to 0 for unlimited.
+// Máximo de usuários permitidos para conectar ao servidor. Defina 0 para ilimitado.
 max_connect_user: 0
 
-// Group ID that is allowed to bypass the server limit of users.
-// Default: -1 = nobody (there are no groups with ID < 0)
-// See: conf/groups.conf
+// Defina o Nível mínimo de GM para burlar o limite de usuários no servidor.
+// Padrão: -1 = ninguem (não há grupos com identificação menor que 0)
+// Veja mais em: conf/groups.conf
 gm_allow_group: -1
 
-// How often should the server save all files? (In seconds)
-// Note: Applies to all data files on TXT servers.
-// On SQL servers, it applies to guilds (character save interval is defined on the map config)
+// Com qual frequência o servidor deve salvar todos os arquivos? (Em segundos)
+// Nota: Aplicado a todos os dados em servidores TXT.
+// Em servidores SQL, isto aplica-se aos clãs (intervalo de salvamento de char é definido na configuração do map)
 autosave_time: 60
 
-// Display information on the console whenever characters/guilds/parties/pets are loaded/saved? 
+// Exibir informações no console sempre que personagens/clãs/grupos/bichos de estimação são carregados/salvos?
 save_log: yes
 
-// Start point, Map name followed by coordinates (x,y)
+// Ponto inicial, Nome do mapa seguido das coordenadas (x,y)
 start_point: new_1-1,53,111
 
-// Starting weapon for new characters
+// Arma inicial para novos personagens
 start_weapon: 1201
 
-// Starting armor for new characters
+// Vestimenta inicial para novos personagens
 start_armor: 2301
 
-// Starting zeny for new characters
+// Zeny inicial para novos personagens
 start_zeny: 0
 
-// Size for the fame-lists
+// Tamanho da lista da fama
 fame_list_alchemist: 10
 fame_list_blacksmith: 10
 fame_list_taekwon: 10
 
-// Guild earned exp modifier.
-// Adjusts taxed exp before adding it to the guild's exp. For example, if set 
-// to 200, the guild receives double the player's taxed exp.
+// Modificador de ganho de experiência do clã.
+// Ajuste a taxa de experiência antes de adicionar isto para a experiência de clãs. Por exemplo, se definido 
+// para 200, o clã receberá o dobro da taxa de doação do jogador.
 guild_exp_rate: 100
 
-// Name used for unknown characters
-unknown_char_name: Unknown
+// Nome utilizado para personagens desconhecidos.
+unknown_char_name: Desconhecido
 
-// To log the character server?
+// Gerar registros para o char-server?
 log_char: 1
 
-// Log Filename
+// Nome do arquivo de Registro.
 char_log_filename: log/char.log
 
-// Allow or not identical name for characters but with a different case (upper/lower):
-// example: Test-test-TEST-TesT; Value: 0 not allowed (default), 1 allowed
+// Permitir ou não nomes idênticos para a criação de personagens com diferentes grafias (maiúsculo/minúsculo):
+// exemplo: Teste-teste-TESTE-TesTe; valor: no = não permitido (padrão), yes = permitido.
 name_ignoring_case: no
 
-// Manage possible letters/symbol in the name of charater. Control character (0x00-0x1f) are never accepted. Possible values are:
-// NOTE: Applies to character, party and guild names.
-// 0: no restriction (default)
-// 1: only letters/symbols in 'char_name_letters' option.
-// 2: Letters/symbols in 'char_name_letters' option are forbidden. All others are possibles.
+// Gerenciamento possível de letras/símbolos para o nome do personagem. O caractere control+dígito (0x00-0x1f) nunca será aceito. Possíveis valores:
+// NOTA: Aplica-se aos personagens, grupos e clãs.
+// 0: sem restrição (padrão do bRO e outros servidores oficiais);
+// 1: somentes letras/símbolos definidos em 'char_name_letters';
+// 2: Letras/símbolos definidos em 'char_name_letters' são proibídos. Todas as outras opções são possíveis.
 char_name_option: 1
 
-// Set the letters/symbols that you want use with the 'char_name_option' option.
-// Note: Don't add spaces unless you mean to add 'space' to the list.
+// Defina as letras/símbolos que você quer usar com a opção 'char_name_option'.
+// Nota: Não adicione espaços a não se quer você queira adicionar 'espaço' na lista.
 char_name_letters: abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890
 
-// How many Characters are allowed per Account ? (0 = disabled)
+// Quantos personagens são permitidos por conta ? (0 = desabilitado)
 chars_per_account: 0
 
-// Restrict character deletion by BaseLevel
-// 0: no restriction (players can delete characters of any level)
-// -X: you can't delete chars with BaseLevel <= X
-// Y: you can't delete chars with BaseLevel >= Y
-// e.g. char_del_level: 80 (players can't delete characters with 80+ BaseLevel)
+// Restringir apagar personagens pelo BaseLevel
+// 0: sem restrição (jogadores podem deletar personagens de qualquer nível)
+// -X: você não pode deletar jogadores com o BaseLevel <= X
+// Y: você não pode deletar jogadores com o BaseLevel >= Y
+// e.g. char_del_level: 80 (você não pode deletar jogadores com o nível de base maior ou igual a 80)
 char_del_level: 0
 
-// Amount of time in seconds by which the character deletion is delayed.
-// Default: 86400 (24 hours)
-// NOTE: Requires client 2010-08-03aragexeRE or newer.
+// Tempo em segundos em que o jogador é deletado pelo novo sistema de deleção de personagens.
+// Padrão: 86400 (24 horas)
+// NOTA: Exige client 2010-08-03a ragexeRE ou mais novo.
 char_del_delay: 86400
 
-// What folder the DB files are in (item_db.txt, etc.)
+// Em que pasta se localiza a DB (item_db.txt, etc.)
 db_path: db
 
-//NOTE: The following online listing options are only for TXT servers.
-
-// Filename of the file which receives the online players list in text
+//NOTA: As opções a seguir são somente para servidores TXT.
+// Nome do arquivo com o número de jogadores online em texto
 online_txt_filename: online.txt
 
-// Filename of the file which receives the online players list, but in html version
+// Nome do arquivo com o número de jogadores online em HTML
 online_html_filename: online.html
 
-// Choose how to display online players.
-// (sorting operation with a lot of online players can take time on a slow computer)
-// 0: no sorting (default)
-// 1: by alphabetical order of their name
-// 2: by number of their zenys
-// 3: by their base level
-// 4: by their job (and job level inside the same job)
-// 5: by alphabetical order of their actual map location
+// Escolha a ordem com que os jogadores online serão mostrados..
+// (operação de ordem pode demorar devido à hora que está seu computador)
+// 0: não ordena (básico)
+// 1: por ordem alfabética
+// 2: por zenys
+// 3: por nível
+// 4: por job
+// 5: por ordem alfabética do mapa ao qual se localiza
 online_sorting_option: 0
 
-// Choose which columns that you want display in the online files. Do the addition of these values:
-// (if value is 0, no file is done)
-// 1: name (just the name, no function like 'GM')
+// Escolha as colunas que você quer que apareça nos arquivos online. Pode haver adição neste valores:
+// (Quando for 0, não haverá nenhum arquivo)
+// 1: nome (nome, não funciona com GM)
 // 2: job
-// 4: levels
-// 8: map name
-// 16: mapname and coordonates
+// 4: nível
+// 8: nome do mapa
+// 16: mapname andnome do mapa e coordenadas
 // 32: zenys
-// 64: name (with 'GM' if the player is a GM)
-// default value: 1 (only name)
+// 64: nome (com GM quando for GM)
+// valor básico: 1 (somente nome)
 online_display_option: 1
 
-// minimum GM level to display 'GM' when we want to display it (default: 1)
+// Nível mínimo de GM para mostrar 'GM' quando estiver online (padrão: 1)
 online_gm_display_min_level: 20
 
-// refresh time (in sec) of the html file in the explorer (default 20)
+// tempo de atualização (em seg) do arquivo html (padrão: 20)
 online_refresh_html: 20
 
 import: conf/import/char_conf.txt
