Arquivos da Crypton adicionados.
Signed-off-by: Jonathan Lima <jonathan_2097@hotmail.com>

--- a/src/map/sql/CMakeLists.txt
+++ b/src/map/sql/CMakeLists.txt
@@ -39,6 +39,7 @@ set( SQL_MAP_HEADERS
 	"${SQL_MAP_SOURCE_DIR}/trade.h"
 	"${SQL_MAP_SOURCE_DIR}/unit.h"
 	"${SQL_MAP_SOURCE_DIR}/vending.h"
+	"${SQL_MAP_SOURCE_DIR}/crypton1.h"
 	)
 set( SQL_MAP_SOURCES
 	"${SQL_MAP_SOURCE_DIR}/atcommand.c"
@@ -76,6 +77,7 @@ set( SQL_MAP_SOURCES
 	"${SQL_MAP_SOURCE_DIR}/trade.c"
 	"${SQL_MAP_SOURCE_DIR}/unit.c"
 	"${SQL_MAP_SOURCE_DIR}/vending.c"
+	"${SQL_MAP_SOURCE_DIR}/crypton1.c"
 	)
 set( DEPENDENCIES common_sql )
 set( LIBRARIES ${GLOBAL_LIBRARIES} )
