Corrigido erro no caminho da pasta db.
Signed-off-by: Jonathan Lima <jonathan_2097@hotmail.com>

--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -79,7 +79,7 @@ map_cache_file: db/map_cache.dat
 
 //Qual diretório onde todo o banco de dados deverá ser lido?
 //Caso deseje usar o banco de dados pré-renewal troque para db
-db_path: db-re
+db_path: db
 
 // Habilitar os comandos @guildspy e @partyspy?
 // Repare que habilitando esses comandos, reduzirá a performance no envio de packets.
